--- a/app.yaml
+++ b/app.yaml
@@ -46,6 +46,7 @@ env_variables:
     modules.upload.upload
     modules.usage_reporting.usage_reporting
     modules.oauth2.oauth2=disabled
+    modules.new_module.new_module
 
 
 
